# skratch_robot_description

./: README.md  instruction.odt
kinova_arm_description/: CMakeLists.txt  package.xml
kinova_arm_description/config/: robot.rviz  simulation.rviz
kinova_arm_description/description/: kinova_arm.urdf  kinova_arm.urdf.xacro  kinova_arm_gazebo.xacro
kinova_arm_description/description/arm/: kinova_base.xacro  kinova_camera.xacro  kinova_fore_arm.xacro  kinova_half_arm_one.xacro  kinova_half_arm_two.xacro  kinova_shoulder.xacro  kinova_spherical_wrist_one.xacro  kinova_spherical_wrist_two.xacro
kinova_arm_description/description/gripper/: gripper_base.xacro  gripper_finger.xacro
kinova_arm_description/launch/: kinova_arm_description.launch  kinova_arm_description.launch.py  kinova_arm_gazebo.launch  kinova_arm_gazebo.launch.py
kinova_arm_description/meshes/arm/: kinova_base.stl  kinova_fore_arm.stl  kinova_half_arm_two.stl  kinova_shoulder.stl  kinova_spherical_wrist_one.stl
kinova_arm_description/meshes/gripper/: gripper_finger.stl
kinova_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kinova_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kinova_arm.ros2_control.xacro  kinova_arm.srdf  kinova_arm.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
kinova_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
skratch_description/: CMakeLists.txt  package.xml
skratch_description/config/: environment.sdf  robot.rviz  simple_environment.sdf  simulation.rviz  slam_parameters.yaml
skratch_description/description/: skratch_gazebo.xacro  skratch_robot.urdf.xacro
skratch_description/description/arm/: kinova_base.xacro  kinova_camera.xacro  kinova_fore_arm.xacro  kinova_half_arm_one.xacro  kinova_half_arm_two.xacro  kinova_shoulder.xacro  kinova_spherical_wrist_one.xacro  kinova_spherical_wrist_two.xacro
skratch_description/description/arm/gripper/: gripper_base.xacro  gripper_finger.xacro
skratch_description/description/base/: skratch_arm_base_plate.xacro  skratch_bottom_base.xacro  skratch_top_base.xacro  skratch_wheel_support.xacro
skratch_description/description/lidar/: lidar.xacro
skratch_description/description/wheels/: skratch_wheel.xacro  skratch_wheel_drive.xacro
skratch_description/launch/: skratch_description.launch  skratch_description.launch.py  skratch_gazebo.launch  skratch_gazebo.launch.py  skratch_mapping.launch  skratch_mapping.launch.py  skratch_navigation.launch.py
skratch_description/meshes/arm/: kinova_half_arm_one.stl  kinova_spherical_wrist_two.stl
skratch_description/meshes/arm/gripper/: gripper_base.stl
skratch_description/meshes/base/: skratch_arm_base_plate.stl  skratch_top_base.stl
skratch_description/meshes/lidar/: lidar.stl
