<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kinova_arm_description</name>
  <version>0.0.0</version>
  <description>TODO: Description of the Kinova arm</description>
  <maintainer email="chaitanyagumudala961@gmail.com">Chaitanya</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>xacro</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  <!-- no build_type needed in ROS 1 -->
  </export>
</package>