<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>skratch_description</name>
  <version>0.0.0</version>
  <description>TODO: Description of the sKratch robot</description>
  <maintainer email="chaitanyagumudala961@gmail.com">Chaitanya</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>xacro</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- test_depend removed: not supported in ROS 1 -->
  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>ament_lint_common</test_depend> -->

  <export>
    <!-- Removed build_type: ament_cmake is ROS 2 only -->
  </export>
</package>